--- a/simplegrid.css
+++ b/simplegrid.css
@@ -118,6 +118,41 @@ p {
 	color: #ec7404;
 }
 
+.footer {
+	text-align: center;
+	width: 100%;
+	padding: 20px;
+	background-color: #343434;
+}
+
+.kontaktform {
+	margin: 0 auto;
+	text-align: left;
+	width: 50%
+}
+
+form {
+	
+}
+
+input,textarea {
+	margin: 10px 0;
+	width: 100%;
+	padding: 10px;
+	text-transform: uppercase;
+	background: #2b2b2b;
+	border: none;
+	color: #ffffff;
+	font-family: Ubuntu;
+	font-weight: 300;
+	font-size: 1.3125rem;
+}
+
+input[type=submit] {
+	background: #ec7404;
+	font-weight: 700;
+}
+
 [class*='col-'] {
 	float: left;
 	padding-right: 20px; /* column-space */
